--- a/JQ.html
+++ b/JQ.html
@@ -11,6 +11,6 @@
     <img src="images/JS.png" alt="JS" id="img1">
     <button onclick="func1()">FADE</button>
 </body>
-<script src="Jquery/jquery.js" type="text/javascript"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="JQ.js" type="text/javascript"></script>
 </html>
