--- a/JQ.html
+++ b/JQ.html
@@ -5,11 +5,19 @@
     <meta http-equiv="X-UA_Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Introduction to jQuery</h1>
-    <img src="images/JS.png" alt="JS" id="img1">
-    <button onclick="func1()">FADE</button>
+    <h1>jQuery Selectors</h1>
+    <div id="div1">
+        <p class="para">This is paragraph 1</p>
+        <p>This is paragraph 2</p>
+    </div>
+    <div id="div2">
+        <p class="para">This is paragraph 3</p>
+        <p>This is paragraph 4</p>
+    </div>
+    <button onclick="func1()">Click me</button>
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="JQ.js" type="text/javascript"></script>
