--- a/effect.html
+++ b/effect.html
@@ -5,16 +5,23 @@
     <meta http-equiv="X-UA_Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        #img{
+            height: 200px;
+            width: 350px;
+            opacity: 0.4;
+            position: absolute;
+        }
+    </style>
 </head>
 <body>
     <h1>Effects in jQuery</h1>
-    <button id="btn7">Slide up</button>
-    <button id="btn8">Slide Down</button>
-    <button id="btn9">Slide-Toggle</button>
-    <button id="btn10">Stop</button>
+    <button id="btn">Animate</button>
     <br>
     <br>
-    <img src="images/J1.png" alt="javascript" id="img1" width="300px">
+    <div>
+        <img src="images/J1.png" alt="Something" id="img">
+    </div>
 </body>
 <script src="Jquery/jquery.js" type="text/javascript"></script>
 <script src="effect.js" type="text/javascript"></script>
